# lwp

./: CMakeLists.txt  main.c
exam/: exam.c
libs/data_structures/matrix/: matrix.c  matrix.h  testMatrix.c  testMatrix.h
libs/data_structures/matrix/tasks/: matrixTasks.c  matrixTasks.h  testMatrixTasks.c  testMatrixTasks.h
libs/data_structures/vector/: testVector.c  vector.c  vector.h  voidVector.c  voidVector.h
libs/file_processing/: file_processing.c  file_processing.h
libs/string_/: string_.c  string_.h  testString_.c  testString_.h
libs/string_/tasks/: stringTasks.c  stringTasks.h  testStringTasks.c  testStringTasks.h
